--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: 'Roboto Mono', monospace;
   margin: 0;
   padding: 0;
 }
@@ -9,5 +10,11 @@
   background: #ffffff;
   height: 100vh;
   text-align: center;
+  width: 100%;
+}
+
+.content-main {
+  display: flex;
+  flex-direction: column;
   width: 100%;
 }
