--- a/src/components/NewsArticle/NewsArticle.css
+++ b/src/components/NewsArticle/NewsArticle.css
@@ -1,5 +1,6 @@
 .newsArticle {
+  border-radius: 4px;
+  border: 2px solid black;
   box-sizing: border-box;
-  border: 3px solid black;
   padding: 10px;
 }
