--- a/src/components/NewsContainer/NewsContainer.css
+++ b/src/components/NewsContainer/NewsContainer.css
@@ -1,6 +1,7 @@
   .newsContainer {
     padding: 30px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
+    overflow: scroll;
   }
